[package]
name = "sp-electrum"
version = "0.0.1"
edition = "2021"

[dependencies]
bwk-electrum = "0.0.4"
bwk-backoff = "0.0.3"
dns-lookup = "3.0.0"
miniscript = { git = "https://github.com/rust-bitcoin/rust-miniscript/", branch = "master" }
serde_json = "1.0.145"
silentpayments = { path = "../rust-silentpayments/" }

bitcoin.version = "0.32.7"
thiserror = "2.0.17"
rand = "0.9.2"

[dev-dependencies]
corepc-node = { git = "https://github.com/rust-bitcoin/corepc.git", branch = "master" ,features = ["download", "30_0"] }
